--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	
 	<div class="entrada">
 		<img src="img/485940.jpg"> 
-		<h1 class="name"><span>Ani</span> Mundo</h1>
+		<h1 class="name"><span>Ani</span> Delta</h1>
 		<h2>La primera y mejor pagina de anime en Cucuta</h2>
 		<svg id="wave" style="transform:rotate(0deg); transition: 0.3s" viewBox="0 0 1440 490" version="1.1" xmlns="http://www.w3.org/2000/svg"><defs><linearGradient id="sw-gradient-0" x1="0" x2="0" y1="1" y2="0"><stop stop-color="rgba(10, 10, 10, 1)" offset="0%"></stop><stop stop-color="rgba(10, 10, 10, 1)" offset="100%"></stop></linearGradient></defs><path style="transform:translate(0, 0px); opacity:1" fill="url(#sw-gradient-0)" d="M0,196L48,196C96,196,192,196,288,212.3C384,229,480,261,576,253.2C672,245,768,196,864,179.7C960,163,1056,180,1152,163.3C1248,147,1344,98,1440,98C1536,98,1632,147,1728,155.2C1824,163,1920,131,2016,122.5C2112,114,2208,131,2304,155.2C2400,180,2496,212,2592,220.5C2688,229,2784,212,2880,204.2C2976,196,3072,196,3168,163.3C3264,131,3360,65,3456,106.2C3552,147,3648,294,3744,302.2C3840,310,3936,180,4032,171.5C4128,163,4224,278,4320,326.7C4416,376,4512,359,4608,359.3C4704,359,4800,376,4896,367.5C4992,359,5088,327,5184,302.2C5280,278,5376,261,5472,261.3C5568,261,5664,278,5760,294C5856,310,5952,327,6048,326.7C6144,327,6240,310,6336,253.2C6432,196,6528,98,6624,114.3C6720,131,6816,261,6864,326.7L6912,392L6912,490L6864,490C6816,490,6720,490,6624,490C6528,490,6432,490,6336,490C6240,490,6144,490,6048,490C5952,490,5856,490,5760,490C5664,490,5568,490,5472,490C5376,490,5280,490,5184,490C5088,490,4992,490,4896,490C4800,490,4704,490,4608,490C4512,490,4416,490,4320,490C4224,490,4128,490,4032,490C3936,490,3840,490,3744,490C3648,490,3552,490,3456,490C3360,490,3264,490,3168,490C3072,490,2976,490,2880,490C2784,490,2688,490,2592,490C2496,490,2400,490,2304,490C2208,490,2112,490,2016,490C1920,490,1824,490,1728,490C1632,490,1536,490,1440,490C1344,490,1248,490,1152,490C1056,490,960,490,864,490C768,490,672,490,576,490C480,490,384,490,288,490C192,490,96,490,48,490L0,490Z"></path></svg>
 	</div>
@@ -37,13 +37,24 @@
 	<div class="Animes">
 		<h1>Animes</h1>
 		<div class="animes">
-			<div class="uno"><img src="img/Animes/kimetsu-no-yaiba.jpg"></div>
-			<div class="dos"><img src="img/Animes/cider-no-you-ni-kotoba-ga-wakiagaru.jpg"></div>
-			<div><img src="img/Animes/megami-ryou-no-ryoubo-kun.jpg" alt=""></div>
-			<div><img src="img/Animes/love-live-superstar.jpg" alt=""></div>
-			<div><img src="img/Animes/night-head-2041.jpg" alt=""></div>
-			<div><img src="img/Animes/meikyuu-black-company.jpg" alt=""></div>
-			<div><img src="img/Animes/gintama-the-final.jpg" alt=""></div>
+			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/kimetsu-no-yaiba.jpg"></div>
+			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/cider-no-you-ni-kotoba-ga-wakiagaru.jpg"></div>
+			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/megami-ryou-no-ryoubo-kun.jpg" alt=""></div>
+			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/love-live-superstar.jpg" alt=""></div>
+			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/night-head-2041.jpg" alt=""></div>
+			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/meikyuu-black-company.jpg" alt=""></div>
+			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/gintama-the-final.jpg" alt=""></div>
+			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/deatte-5-byou-de-battle.jpg" alt=""></div>
+			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/deatte-5-byou-de-battle.jpg" alt=""></div>
+			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/deatte-5-byou-de-battle.jpg" alt=""></div>
+			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/deatte-5-byou-de-battle.jpg" alt=""></div>
+			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/deatte-5-byou-de-battle.jpg" alt=""></div>
+			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/deatte-5-byou-de-battle.jpg" alt=""></div>
+			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/deatte-5-byou-de-battle.jpg" alt=""></div>
+			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/deatte-5-byou-de-battle.jpg" alt=""></div>
+			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/deatte-5-byou-de-battle.jpg" alt=""></div>
+			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/deatte-5-byou-de-battle.jpg" alt=""></div>
+			
 		</div>
 	</div>
 
