Agregacion de una pagina y mejoras en css

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/styles.css">
-	<title>NiIdea</title>
+	<title>Anime gratis-AniDelta</title>
 </head>
 <body>
 	<header>
 		<div class="cabeza">
 			<img src="img/LOGO.png" class="logoImg">
-			<h3>AniMundo</h3>	
+			<h3>AniDelta</h3>	
 			<ul>
 				<li><a href="#">Inicio</a></li>
 				<li><a href="#">Animes</a></li>
@@ -52,11 +52,9 @@
 			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/deatte-5-byou-de-battle.jpg" alt=""></div>
 			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/deatte-5-byou-de-battle.jpg" alt=""></div>
 			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/deatte-5-byou-de-battle.jpg" alt=""></div>
-			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/deatte-5-byou-de-battle.jpg" alt=""></div>
-			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/deatte-5-byou-de-battle.jpg" alt=""></div>
-			
 		</div>
 	</div>
+	
 
 </body>
 </html>
