Colocacion de la plantilla para la entrada de anime y css agregado

--- a/animes/Kimetsu/kimetsuS.html
+++ b/animes/Kimetsu/kimetsuS.html
@@ -14,7 +14,7 @@
 			<img src="../../img/LOGO.png" class="logoImg">
 			<h3>AniDelta</h3>	
 			<ul>
-				<li><a href="#">Inicio</a></li>
+				<li><a href="../../index.html">Inicio</a></li>
 				<li><a href="#">Animes</a></li>
 				<li><a href="#">Categorias</a></li>
 				<li><a href="#">En emision</a></li>
@@ -34,6 +34,8 @@
 			<p>
 				Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Velit, nihil et praesentium voluptatibus rem, alias autem iste cumque maiores ipsa? Quo, quia, sequi? Cum nobis, dolorum, <br>numquam et pariatur possimus quae deleniti aliquam eligendi, voluptatum vitae mollitia autem maiores totaam Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, aliquid! Voluptatum eos harum voluptas sequi doloribus, ducimus cum voluptates, mollitia, aut quos aperiam nisi beatae optio doloremque esse dolor minus?
 			</p>
+			<br>
+			<label style="font-size: 20px;">Episodios: 14</label>
 		</div>
 		
 		<div class="img">
@@ -42,8 +44,83 @@
 		</div>
 
 		<div class="caps">
-			
-
+			<h2>Capitulos</h2>
+			<div class="capi">
+			<ul>
+				<a href="#">
+					<li>
+						<i class="fas fa-play" style="margin-right: 25px;">	</i>
+						Cap 1
+					</li>
+				</a>
+				<a href="#">
+					<li>
+						<i class="fas fa-play" style="margin-right: 25px;">	</i>
+						Cap 1
+					</li>
+				</a>
+				<a href="#">
+					<li>
+						<i class="fas fa-play" style="margin-right: 25px;">	</i>
+						Cap 1
+					</li>
+				</a>
+				<a href="#">
+					<li>
+						<i class="fas fa-play" style="margin-right: 25px;">	</i>
+						Cap 1
+					</li>
+				</a>
+				<a href="#">
+					<li>
+						<i class="fas fa-play" style="margin-right: 25px;">	</i>
+						Cap 1
+					</li>
+				</a>
+				<a href="#">
+					<li>
+						<i class="fas fa-play" style="margin-right: 25px;">	</i>
+						Cap 1
+					</li>
+				</a>
+				<a href="#">
+					<li>
+						<i class="fas fa-play" style="margin-right: 25px;">	</i>
+						Cap 1
+					</li>
+				</a>
+				<a href="#">
+					<li>
+						<i class="fas fa-play" style="margin-right: 25px;">	</i>
+						Cap 1
+					</li>
+				</a>
+				<a href="#">
+					<li>
+						<i class="fas fa-play" style="margin-right: 25px;">	</i>
+						Cap 1
+					</li>
+				</a>
+				<a href="#">
+					<li>
+						<i class="fas fa-play" style="margin-right: 25px;">	</i>
+						Cap 1
+					</li>
+				</a>
+				<a href="#">
+					<li>
+						<i class="fas fa-play" style="margin-right: 25px;">	</i>
+						Cap 1
+					</li>
+				</a>
+				<a href="#">
+					<li>
+						<i class="fas fa-play" style="margin-right: 25px;">	</i>
+						Cap 1
+					</li>
+				</a>
+			</ul>				
+			</div>
 		</div>
 	</div>
 
