--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<div class="Animes">
 		<h1>Animes</h1>
 		<div class="animes">
-			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/kimetsu-no-yaiba.jpg"></div>
+			<div><p>Kimetsu no Yaiba</p><a href="animes/Kimetsu/kimetsuS.html"><img src="img/Animes/kimetsu-no-yaiba.jpg"></a></div>
 			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/cider-no-you-ni-kotoba-ga-wakiagaru.jpg"></div>
 			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/megami-ryou-no-ryoubo-kun.jpg" alt=""></div>
 			<div><p>Kimetsu no Yaiba</p><img src="img/Animes/love-live-superstar.jpg" alt=""></div>
